<resources>
    <string name="app_name">3D</string>
    <string name="facebook_app_id">1081957648531079</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">Salir</string>
    <string name="permisos_result_main">Ya has autorizado los permisos</string>
    <string name="titulo_gps_no_activo_main">GPS no activado</string>
    <string name="activar_gps_main">¿Deseas activar tu GPS? No podrás usar la aplicación sin activar tu GPS</string>
    <string name="salir">Salir</string>
    <string name="activar">Activar</string>
    <string name="cancelar_envio_agregar">¿Quieres cancelar tu envío?</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    <string name="error_campo_obligatorio_agregar">Este campo es obligatorio</string>
    <string name="imagen_obligatoria_agregar">La imagen es obligatoria</string>
    <string name="titulo_agregar_activity">"Agregar - "</string>
    <string name="titulo_categorias_activity">Categorías</string>
    <string name="animales_categoria">Animales</string>
    <string name="ambientales_categoria">Ambientales</string>
    <string name="policiales_categoria">Policiales</string>
    <string name="legales_categoria">Legales</string>
    <string name="servicios_categoria">Servicios</string>
    <string name="sociales_categoria">Sociales</string>
    <string name="negocios_categoria">Negocios</string>
    <string name="emergencias_categoria">Emergencias</string>
    <string name="informacion_invalida_categorias">Información inválida</string>
    <string name="datos_no_coinciden_categorias">Los datos seleccionados no coindicen. Intenta de nuevo.</string>
    <string name="validando_informacion_login">Validando tu información...</string>
    <string name="conexion_internet_marcadoresasync">Verifica tu conexión a internet</string>
    <string name="exito_postasync">Operación exitosa</string>
    <string name="exito_compartir_face_postasync">Has añadido el marcador con éxito. Gracias por tu información. ¿Deseas compartir tu aporte en Facebook?</string>
    <string name="no">No</string>
    <string name="si">Sí</string>
    <string name="mensaje_descrip_facebook_link">Reporta lo que sucede en tu ciudad ayuda a tu comunidad y se parte de la solución</string>
    <string name="title_facebook_link">DDD</string>
    <string name="quote_facebook_link">Mira el reporte que hice, descarga DDD ahora mismo</string>
    <string name="error_operacion_postasync">Error en la operación</string>
    <string name="verificagpsinternet_postasync">Verifica tu conexión a internet y asegúrate que tu GPS esté encendido e intenta de nuevo</string>
    <string name="generando_marcador_postasync">Generando marcador, por favor espera</string>
    <string name="menu_perfil">Mi Perfil</string>
    <string name="tu_perfil">Tu perfil</string>
    <string name="menu_filtrar">Filtrar</string>
    <string name="agregar_habla_ahora">Habla ahora</string>
    <string name="agregar_error_funcion_hablar">Lo sentimos, tu dispositivo no soporta esta función</string>
</resources>
